# Remit_agent

./: pyproject.toml  run_app.py  setup.py
src/Remit_agent/: __init__.py  config.py  database.py  logger.py  prompts.py
src/Remit_agent/core/: __init__.py  sql_agent.py
src/Remit_agent/tools/: __init__.py  tool_monitoring.py  tools.py
src/Remit_agent/ui/: __init__.py  streamlit_app.py
tests/: test_connection.py  test_table_schema.py
