[tool.poetry]
name = "remit-agent"
version = "0.1.0"
description = "A SQL Agent for natural language database queries"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "Remit_agent", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
black = "^24.10.0"
isort = "^5.13.2"
langchain = "^0.3.13"
langchain-openai = "^0.2.13"
langgraph = "^0.2.60"
langchain-community = "^0.3.13"
pydantic = "^2.10.4"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
Markdown = "^3.5.2"
streamlit = "^1.41.1"
typing-extensions = "^4.9.0"
pyodbc = "^5.2.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
remit-agent = "Remit_agent.core.sql_agent:main"
remit-agent-ui = "Remit_agent.ui.streamlit_app:main"